# bookstack-downloader

./: .gitignore  CHANGELOG.md  README.md  setup.cfg
src/bookstack_downloader/: downloader.py
