[metadata]
name = bookstack_downloader
version = 1.0~beta
author = Rob Weber
author_email = rweber@ecec.com
description = Exports BookStack books/chapters/pages as PDF documents for archiving
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eau-claire-energy-cooperative/bookstack-downloader
project_urls =
  Bug Tracker = https://github.com/eau-claire-energy-cooperative/bookstack-downloader/issues
classifiers =
  Development Status :: 4 - Beta
  Programming Language :: Python :: 3
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
install_requires =
  configargparse
  bookstack-python @ git+https://github.com/eau-claire-energy-cooperative/bookstack-python.git
package_dir =
  = src
packages = find_namespace:
python_requires = >=3.10

[options.entry_points]
console_scripts =
  bookstack-downloader = bookstack_downloader.downloader:main

[options.packages.find]
  where = src

[options.extras_require]
dev =
  flake8

[flake8]
max-line-length = 150
